# httpxr

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md  cliff.toml  llm.txt  mkdocs.yml  pyproject.toml  pyrightconfig.json  temp_test.py  zensical.toml
.agent/: agents.md
.agent/workflows/: no_ai_slop.md  run_tests.md  rust_build.md  safe_commit.md
.agents/workflows/: optimize.md  push-to-main.md
.github/workflows/: CI.yml  ci.yml  docs.yml
benchmarks/: conftest.py  run_benchmark.py  server.py  test_bench_httpx.py  test_regression.py
docs/: authentication.md  benchmarks.md  changelog.md  cli.md  clients.md  compat.md  cookbook.ipynb  cookbook.md  error-handling.md  extensions.md  headers-params-cookies.md  how-it-was-built.md  index.md  llm.txt  migration.md  quickstart.md  requests-responses.md  resilience.md  sse.md  streaming.md  testing.md  timeouts-limits.md
docs/assets/: extra.css
examples/: README.md  async_client.py  async_gather.py  authentication.py  basic_requests.py  client_usage.py  download.py  error_handling.py  gather.py  headers_and_params.py  json_and_forms.py  json_streaming.py  mock_transport.py  paginate.py  resilient_client.py  streaming.py  timeouts_and_limits.py
examples/databricks/: load_concurrent_rest.py  load_from_graph_api.py
httpr/: __init__.py  _exceptions.py  _urlparse.py  _utils.py  cli.py
httpr/_transports/: asgi.py  wsgi.py
httpxr/: __init__.py  __init__.pyi  _exceptions.py  _httpxr.pyi  _urlparse.py  _utils.py  cli.py  compat.py  extensions.py  extensions.pyi
httpxr/_transports/: __init__.py  asgi.py  wsgi.py
httpxr/sse/: __init__.py  _api.py  _decoders.py  _exceptions.py  _models.py
scripts/: benchmark_regression.py
src/: api.rs  auth.rs  client.rs.bak  config.rs  content.rs  decoders.rs  exceptions.rs  lib.rs  logger.rs  models.rs  multipart.rs  query_params.rs  status_codes.rs  stream_ctx.rs  test_urlparse_debug.rs  types.rs  urlparse.rs  urls.rs  utils.rs
src/client/: async_client.rs  async_client_methods.rs  async_client_send.rs  common.rs  mod.rs  sync_client.rs  sync_client_ext.rs  sync_client_methods.rs  sync_client_send.rs
src/models/: cookies.rs  headers.rs  mod.rs  request.rs  response.rs  response_properties.rs  response_streaming.rs
src/transports/: base.rs  default.rs  helpers.rs  mock.rs  mod.rs
tests/: conftest.py  test_api.py  test_asgi.py  test_auth.py  test_bigdata.py  test_compat.py  test_config.py  test_content.py  test_decoders.py  test_exceptions.py  test_exported_members.py  test_httpx_api_compat.py  test_main.py  test_multipart.py  test_new_features.py  test_sse.py  test_ssl.py  test_status_codes.py  test_timeouts.py  test_utils.py  test_wsgi.py
tests/client/: test_async_client.py  test_auth.py  test_client.py  test_cookies.py  test_debug_ki.py  test_event_hooks.py  test_gather_paginate.py  test_headers.py  test_properties.py  test_proxies.py  test_queryparams.py  test_redirects.py  test_subclassing.py
tests/models/: test_cookies.py  test_headers.py  test_queryparams.py  test_requests.py  test_responses.py  test_url.py  test_whatwg.py
