[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "httpr"
description = "A 1:1 Rust port of httpx — same API, faster execution."
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Dominik Peter" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = []
dynamic = ["readme", "version"]

[project.optional-dependencies]
cli = [
    "click==8.*",
    "pygments==2.*",
    "rich>=10,<15",
]

[project.scripts]
httpr = "httpr:main"

[project.urls]
Source = "https://dev.azure.com/bmeurope/BMS%20-%20Data/_git/httpr"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "httpr._httpr"


[tool.ruff.lint]
select = ["E", "F", "I", "B", "PIE"]
ignore = ["B904", "B028"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405"]

[tool.mypy]
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-rxXs"
filterwarnings = [
  "default",
]
markers = [
  "copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup",
  "network: marks tests which require network connection. Used in 3rd-party build environments that have network disabled."
]
testpaths = ["tests", "benchmarks"]

[tool.coverage.run]
omit = ["venv/*"]
include = ["httpr/*", "tests/*"]

[dependency-groups]
dev = [
    "anyio>=4.0",
    "certifi",
    "chardet>=5.0",
    "httpcore==1.*",
    "idna",
    "pandas>=2.0",
    "polars>=1.0",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-benchmark>=5.2.3",
    "sniffio>=1.3",
    "socksio>=1.0",
    "trio>=0.25",
    "trustme>=1.2.1",
    "uvicorn>=0.40.0",
    "zstandard>=0.18.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkautodoc>=0.2.0",
]
